##Text encoding: utf-8

2006-07-28  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/man/gchem3d-viewer.1.xml: Fixed Header.
	(OPTIONS): Cosmetic changes. More general description of the --help-*
	option(s).
	* docs/man/gchemcalc.1.xml: Ditto.
	* docs/man/gchemtable.1.xml: Fixed Header.
	* docs/man/libgcu.3.xml: Ditto.
	* docs/man/gchem3d-viewer.1: Updated.
	* docs/man/gchemcalc.1: Ditto.
	* docs/man/gchemtable.1: Ditto.
	* docs/man/libgcu.3: Ditto.

2006-07-15  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/man/libgcu.3: Updated from last XML source.

2006-07-15  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/man/libgcu.3.xml: Small change to get the same headers *.1
	provide.

2006-07-15  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/man/gchem3d-viewer.1: Updated from last XML source.
	* docs/man/gchemcalc.1: Ditto.
	* docs/man/gchemtable.1: Ditto.

2006-07-15  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/man/gchemcalc.1.xml: Added more information about the program,
	completing the options section.
	* docs/man/gchemtable.1.xml: Ditto.

2006-07-15  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/man/gchem3d-viewer.1.xml: Added more information about the
	program, completing the options section.

2006-05-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: fixed mozilla-config use (thanks to Pav Lucistnik).
	
2006-05-08  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* programs/gchem3d-viewer.c: Fixed a compilation warning using a
	typecast.

2006-05-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.6.2).

2006-05-06  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/man/Makefile.am: Fixed prefix to add to manpages in check
	target.

2006-05-06  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* acinclude.m4: Remove some obsolete stuff.

2006-05-06  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/man/Makefile.am: Fixed man-usage in the check target. Removed