@@ -1,11 +1,11 @@
 .\"     Title: gchemtable
 .\"    Author: Daniel Leidert <daniel.leidert@wgdd.de>
 .\" Generator: DocBook XSL Stylesheets v1.70.1 <http://docbook.sf.net/>
-.\"      Date: $Date: 2006-07-28 01:03:20 $
+.\"      Date: $Date: 2006-08-15 00:37:57 $
 .\"    Manual: gnome\-chemistry\-utils
 .\"    Source: gcu 0.6.2
 .\"
-.TH "GCHEMTABLE" "1" "$Date: 2006-07-28 01:03:20 $" "gcu 0.6.2" "gnome\-chemistry\-utils"
+.TH "GCHEMTABLE" "1" "$Date: 2006-08-15 00:37:57 $" "gcu 0.6.2" "gnome\-chemistry\-utils"
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
@@ -14,7 +14,6 @@
 gchemtable \- periodic table of the elements
 .SH "DESCRIPTION"
 .PP
-
 \fBgchemtable\fR
 is a periodic table of the elements application.
 .SH "OPTIONS"
