@@ -5,7 +5,7 @@
 	"/usr/share/xml/docbook/schema/dtd/4.4/docbookx.dtd" [
 
 <!--
-	$Id: gchemtable.1.xml,v 1.1.2.3 2006-07-28 01:03:20 dleidert Exp $
+	$Id: gchemtable.1.xml,v 1.1.2.4 2006-08-15 00:37:57 dleidert Exp $
 
   Copyright (C) 2006 Daniel Leidert <daniel.leidert@wgdd.de>.
 
@@ -27,7 +27,7 @@
 	<!ENTITY dhpackage    "gchemtable">
 	<!ENTITY dhulapackage "gcu">
 
-	<!ENTITY dhdate       "$Date: 2006-07-28 01:03:20 $">
+	<!ENTITY dhdate       "$Date: 2006-08-15 00:37:57 $">
 	<!ENTITY dhsection    "1">
 
 	<!ENTITY % _gcu_entities SYSTEM "gcu_entities.dtd">
@@ -60,17 +60,13 @@
 		<refname>&dhpackage;</refname>
 		<refpurpose>periodic table of the elements</refpurpose>
 	</refnamediv>
-	<refsect1>
+	<refsect1 id="description">
 		<title>DESCRIPTION</title>
-		<para>
-			<command>&dhpackage;</command> is a periodic table of the elements application.
-		</para>
+		<para><command>&dhpackage;</command> is a periodic table of the elements application.</para>
 	</refsect1>
-	<refsect1>
+	<refsect1 id="options">
 		<title>OPTIONS</title>
-		<para>
-			No options are available.
-		</para>
+		<para>No options are available.</para>
 	</refsect1>
 </refentry>
 
