@@ -5,7 +5,7 @@
 	"/usr/share/xml/docbook/schema/dtd/4.4/docbookx.dtd" [
 
 <!--
-	$Id: libgcu.3.xml,v 1.1.2.3 2006-07-28 01:03:20 dleidert Exp $
+	$Id: libgcu.3.xml,v 1.1.2.4 2006-08-15 00:37:57 dleidert Exp $
 
   Copyright (C) 2006 Daniel Leidert <daniel.leidert@wgdd.de>.
 
@@ -27,7 +27,7 @@
 	<!ENTITY dhpackage    "libgcu">
 	<!ENTITY dhulapackage "gcu">
 
-	<!ENTITY dhdate       "$Date: 2006-07-28 01:03:20 $">
+	<!ENTITY dhdate       "$Date: 2006-08-15 00:37:57 $">
 	<!ENTITY dhsection    "3">
 
 	<!ENTITY % _gcu_entities SYSTEM "gcu_entities.dtd">
@@ -63,14 +63,11 @@
 	<refsynopsisdiv>
 		<synopsis><emphasis role="bold"><![CDATA[#include gcu/chemistry.h]]></emphasis></synopsis>
 	</refsynopsisdiv>
-	<refsect1>
+	<refsect1 id="description">
 		<title>DESCRIPTION</title>
-		<para>
-			The <package>&dhpackage;</package> library provides various Gtk widgets and C++
-			classes related to chemistry. 
-		</para>
+		<para>The <package>&dhpackage;</package> library provides various Gtk widgets and C++ classes related to chemistry.</para>
 	</refsect1>
-	<refsect1>
+	<refsect1 id="files">
 		<title>FILES</title>
 		<para></para>
 		<variablelist>
@@ -88,14 +85,9 @@
 			</varlistentry>
 		</variablelist>
 	</refsect1>
-	<refsect1>
+	<refsect1 id="see_also">
 		<title>SEE ALSO</title>
-		<para>
-			The complete reference with examples is available online
-			at <ulink url="http://www.nongnu.org/gchemutils/reference/"/> or (depending on
-			your distribution) also locally
-			at <filename>${datadir}/doc/gchemutils/reference</filename>.
-		</para>
+		<para>The complete reference with examples is available online at <ulink url="http://www.nongnu.org/gchemutils/reference/"/> or (depending on your distribution) also locally at <filename>${datadir}/doc/gchemutils/reference</filename>.</para>
 	</refsect1>
 </refentry>
 
